--- a/examples/todo/Makefile
+++ b/examples/todo/Makefile
@@ -1,6 +1,9 @@
 default:
 	echo "use one command"
 
+docs:
+	swag init -g rest/routes.go --parseDependency
+
 generate:
 	sqlc generate
 
@@ -18,7 +21,7 @@ create-user:
 	- curl -i -XPOST http://localhost:8080/api/v1/users -d '{"email": "g+1@gkomninos.com", "password": "what1!#ok","firstName": "Avraam", "lastName": "Papadopoulos"}'
 
 get-users:
-	 - curl -i -XGET 'http://localhost:8080/api/v1/users/?pageSize=10'
+	 - curl -i -XGET 'http://localhost:8080/api/v1/admin/users/?pageSize=10'
 
 get-user:
 	 - curl -i -XGET http://localhost:8080/api/v1/users/2
