--- a/examples/simple-todo/Makefile
+++ b/examples/simple-todo/Makefile
@@ -3,3 +3,9 @@ default:
 
 run:
 	go run main.go
+
+swaggen:
+	swag init -g rest/routes.go --parseDependency
+
+enter-docker-db:
+	docker exec -it simple-todo_db_1 psql -U postgres todo
